# pyplotter

./: .gitignore  CHANGELOG  LICENSE  MANIFEST.in  README.md  Thumbs.db  __init__.py  a.py  mainWindowui_r2c2.py  plot1d.py  plotter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
plotter/: plotter.py
plotter/sources/: DateAxisItem.py  config.py  dbMenu.py  filtering.py  fit.py  functions.py  importbluefors.py  importcsv.py  importdatabase.py  loaddata.py  main.py  (+8 more)
pyplotter/: pyplotter.py
sources/: MyTableWidgetItem.py  a.py  bluefors.py  config.py  csv.py  data.py  filtering.py  fit.py  importDatabase.py  importbluefors.py  importcsv.py  importdatabase.py  loadData.py  loaddata.py  login_app.py  main.py  pcolormeshitem.py  pcolormeshview.py  plot_1d_app.py  plot_2d_app.py  plot_app.py  qcodesdatabase.py  runpropertiesextra.py
test.dir/: 00001- Silicon sample.csv  00001- Silicon sample.ini  00007 - %vQ1%g, Q2%c Q1 t1 gpa1=0.4.csv  00007 - %vQ1%g, Q2%c Q1 t1 gpa1=0.4.ini  00009 - Q1, %vQ2%g%c G2, .csv  00009 - Q1, %vQ2%g%c G2, .ini  00011 - %vQ1%g, Q2%c vna scan r2.csv  00011 - %vQ1%g, Q2%c vna scan r2.ini  00096 - %vQ1%g, Q2%c Ramsey Q1.csv  00096 - %vQ1%g, Q2%c Ramsey Q1.ini  00110 - %vQ1%g, Q2%c spin echo .csv  00110 - %vQ1%g, Q2%c spin echo .ini  00112 - %vQ1%g, Q2%c Ramsey Q1.csv  00112 - %vQ1%g, Q2%c Ramsey Q1.ini
test_folder/: 2dShapping.ipynb  notebookLivePlot.ipynb
ui/: login.py  login.ui  main.py  main.ui  main2.ui  plot1d.py  plot1d.ui  plot2d.py  plot2d.ui  plot_widget.py  qtablewidgetkey.py
(+199 files in other folders)
