[metadata]
name = pyplotter
version = 0.3.8
author = Étienne Dumur
author_email = etienne.dumur@cea.fr
maintainer = Étienne Dumur
maintainer_email = etienne.dumur@cea.fr
description = A data browser and vizualizer for QCoDes database, csv, npz, s2p and BlueFors logging files.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/pyplotter/pyplotter
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

license = MIT
packages=find_packages(),

[options]
python_requires = >=3.8
include_package_data = True
install_requires =
    qdarkstyle
    lmfit
    multiprocess
    numpy>=1.17.0
    pandas>=1.0.0
    platformdirs
    pyopengl
    pyqt5
    pyqt5-sip
    pyqtwebengine
    pyqtgraph>=0.12.3
    qcodes>=0.26.0
    scikit-rf
    scipy
    pylabrad


[options.entry_points]
console_scripts =
    plotter = pyplotter.pyplotter:main
    pyplotter = pyplotter.pyplotter:main
